--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -16,8 +16,9 @@
         <hr>
         Temp: {{ weather_data['main']['temp'] }}
     {% else %}
-        <h1>TEST</h1>
+        <h5>{{message}}</h5>
     {% endif %}
+
 
 </body>
 </html>
