modify and style  weather app

--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -4,20 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
+    <link rel="stylesheet" href="/static/css/index.css">
     <title>Weather App</title>
 </head>
 <body>
-    <h1>Weather App</h1>
-    <form action="/" method="GET">
-        <input name= "city" type="text" placeholder="City Name">
-        <button type="submit">Get Weather</button>
-    </form>
-    {% if weather_data %}
-        <hr>
-        Temp: {{ weather_data['main']['temp'] }}
-    {% else %}
-        <h5>{{message}}</h5>
-    {% endif %}
+    <div class='wrapper'>
+        <div class="pic">
+            <img src="/static/img/weather.jpg">
+        </div>
+        <h1 class='light' >Weather Info</h1>
+        <br></br>
+        <form action="/" method="GET">
+            <input class='ipt' name= "city" type="text" placeholder="City Name">
+            <br></br>
+            <button class='btn' type="submit">Get Weather</button>
+        </form>
+        <br></br>
+        {% if weather_data %}
+            <ul>
+                <li>City: {{ weather_data['name']}}</li>
+                <li>Temp: {{ weather_data['main']['temp']}} F</li>
+                <li>Description: {{ weather_data['weather'][0]['description']}}</li>
+                <li>Temp: {{ weather_data['main']['temp']}} F</li>
+                <li>Temp Min: {{ weather_data['main']['temp_min']}} F</li>
+                <li>Temp Max: {{ weather_data['main']['temp_max']}} F</li>
+                <li>Wind Speed: {{ weather_data['wind']['speed']}} mph</li>
+            </ul>
+        {% endif %}
+    </div>
 
 
 </body>
