finish cache, refined code

--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -21,14 +21,14 @@
             <button class='btn' type="submit">Get Weather</button>
         </form>
         <br></br>
-        {% if weather_data %}
+        {% if weather_data_db %}
             <ul>
-                <li>City: {{ weather_data['name']}}</li>
-                <li>Temp: {{ weather_data['main']['temp']}} F</li>
-                <li>Temp Min: {{ weather_data['main']['temp_min']}} F</li>
-                <li>Temp Max: {{ weather_data['main']['temp_max']}} F</li>
-                <li>Description: {{ weather_data['weather'][0]['description']}}</li>
-                <li>Wind Speed: {{ weather_data['wind']['speed']}} mph</li>
+                <li>City: {{ weather_data_db[0] }}</li>
+                <li>Temp: {{ weather_data_db[1] }} F</li>
+                <li>Temp Min: {{ weather_data_db[2] }} F</li>
+                <li>Temp Max: {{ weather_data_db[3]}} F</li>
+                <li>Description: {{ weather_data_db[4]}}</li>
+                <li>Wind Speed: {{ weather_data_db[5] }} mph</li>
             </ul>
         {% endif %}
     </div>
